<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/settings_dialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/backGrey">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/cardView_margin"
            android:layout_marginTop="@dimen/cardView_margin"
            android:gravity="center"
            android:text="@string/changeLang"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </RelativeLayout>

    <RadioGroup
        android:id="@+id/languagesGroupID"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/cardView_margin"
        android:layout_marginTop="@dimen/cardView_margin"
        android:orientation="horizontal"
        android:gravity="center">
        <RadioButton
            android:id="@+id/englishLangID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/english"/>
        <RadioButton
            android:id="@+id/spanishLangID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spanish"/>
    </RadioGroup>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/backGrey">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/cardView_margin"
            android:layout_marginTop="@dimen/cardView_margin"
            android:gravity="center"
            android:text="@string/change_Ip_Host"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </RelativeLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputAddressID"
        android:layout_width="match_parent"
        android:layout_marginBottom="@dimen/cardView_margin"
        android:layout_marginTop="@dimen/cardView_margin"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/ipAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="16dp"
            android:hint="@string/url" />
    </android.support.design.widget.TextInputLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/backGrey">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/cardView_margin"
            android:layout_marginTop="@dimen/cardView_margin"
            android:gravity="center"
            android:text="@string/loginTitle"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </RelativeLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputUsrID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/cardView_margin">

        <EditText
            android:id="@+id/usr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="16dp"
            android:hint="@string/username" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputPswID"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/psw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="16dp"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancelSettingsBtnId"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancelBtn"/>

        <Button
            android:id="@+id/okSettingsBtnId"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/okBtn"/>
    </LinearLayout>
</LinearLayout>
