<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/card_viewMovementID"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:padding="2dp"
        card_view:cardCornerRadius="2dp"
        card_view:cardElevation="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:layout_marginBottom="2dp">



            <TextView
                android:id="@+id/dateMovementsID"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/fecha"
                android:textColor="@color/newGrey"
                android:textStyle="bold" />

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="@color/newGrey2" />

            <!--<TextView-->
                <!--android:id="@+id/stationMovementsID"-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="fill_parent"-->
                <!--android:layout_weight="1"-->
                <!--android:background="@color/backGrey"-->
                <!--android:gravity="center"-->
                <!--android:text="@string/estacion"-->
                <!--android:textColor="@color/white"-->
                <!--android:textStyle="bold" />-->

            <!--<View-->
                <!--android:layout_width="2dp"-->
                <!--android:layout_height="match_parent"-->
                <!--android:background="@color/colorAccent" />-->

            <TextView
                android:id="@+id/fuelTypeMovementsID"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/tipoCombustible"
                android:textColor="@color/newGrey"
                android:textStyle="bold" />

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="@color/newGrey2" />

            <TextView
                android:id="@+id/totalPaidMovementsID"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/total"
                android:textColor="@color/newGrey"
                android:textStyle="bold" />

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="@color/newGrey2" />

            <ImageView
                android:id="@+id/pdfMovementsID"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:src="@drawable/icono_pdf"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>